//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Alumno {
  id Int [pk, increment]
  creadoEn DateTime [default: `now()`, not null]
  actualizadoEn DateTime [not null]
  nombre String [not null]
  primerApellido String [not null]
  segundoApellido String
  email String [not null]
  fechaNacimiento DateTime [not null]
  semestre Int [not null, default: 1]
  cursos AlumnosEnCursos [not null]
  entrega EntregaAsignacionAlumno [not null]
  usuario Usuario
  idUsuario Int [not null]
  activo Boolean [not null, default: true]
}

Table Docente {
  id Int [pk, increment]
  creadoEn DateTime [default: `now()`, not null]
  actualizadoEn DateTime [not null]
  nombre String [not null]
  primerApellido String [not null]
  segundoApellido String
  email String [not null]
  fechaNacimiento DateTime [not null]
  usuario Usuario
  idUsuario Int [not null]
  activo Boolean [not null, default: true]
  cursos Curso [not null]
}

Table Administrativo {
  id Int [pk, increment]
  creadoEn DateTime [default: `now()`, not null]
  actualizadoEn DateTime [not null]
  nombre String [not null]
  primerApellido String [not null]
  segundoApellido String [not null]
  email String [not null]
  fechaNacimiento DateTime [not null]
  usuario Usuario
  idUsuario Int [not null]
  activo Boolean [not null, default: true]
}

Table Curso {
  id Int [pk, increment]
  creadoEn DateTime [default: `now()`, not null]
  actualizadoEn DateTime [not null]
  fechaInicio DateTime [not null]
  fechaFinal DateTime [not null]
  materia Materia
  idMateria Int
  docente Docente
  idDocente Int
  horario Horario
  idHorario Int
  asignaciones Asignacion [not null]
  alumnos AlumnosEnCursos [not null]
}

Table AlumnosEnCursos {
  alumno Alumno
  idAlumno Int [not null]
  curso Curso
  idCurso Int [not null]
  calificacion Decimal [not null]

  indexes {
    (idAlumno, idCurso) [pk]
  }
}

Table Horario {
  id Int [pk, increment]
  creadoEn DateTime [default: `now()`, not null]
  actualizadoEn DateTime [not null]
  cursos Curso [not null]
}

Table Asignacion {
  id Int [pk, increment]
  creadoEn DateTime [default: `now()`, not null]
  actualizadoEn DateTime [not null]
  nombre String [not null]
  valor Decimal [not null]
  curso Curso
  idCurso Int [not null]
  entregas EntregaAsignacionAlumno [not null]
}

Table EntregaAsignacionAlumno {
  asignacion Asignacion
  idAsignacion Int [not null]
  alumno Alumno
  idAlumno Int [not null]
  fechaDeEntrega DateTime [not null]

  indexes {
    (idAsignacion, idAlumno) [pk]
  }
}

Table Materia {
  id Int [pk, increment]
  creadoEn DateTime [default: `now()`, not null]
  actualizadoEn DateTime [not null]
  nombre String [not null]
  cursos Curso [not null]
}

Table Usuario {
  id Int [pk, increment]
  creadoEn DateTime [default: `now()`, not null]
  actualizadoEn DateTime [not null]
  usuario String [unique, not null]
  password String [not null]
  ultimoInicio DateTime
  alumnos Alumno [not null]
  docentes Docente [not null]
  administrativos Administrativo [not null]
  tipoPersona Int [not null, default: 0]
  sesiones Sesion [not null]
}

Table Sesion {
  id Int [pk, increment]
  token String [not null]
  usuario Usuario [not null]
  idUsuario Int [not null]
}

Enum TipoPersona {
  ALUMNO
  DOCENTE
  ADMINISTRATIVO
}

Ref: Alumno.idUsuario > Usuario.id

Ref: Docente.idUsuario > Usuario.id

Ref: Administrativo.idUsuario > Usuario.id

Ref: Curso.idMateria > Materia.id

Ref: Curso.idDocente > Docente.id

Ref: Curso.idHorario > Horario.id

Ref: AlumnosEnCursos.idAlumno > Alumno.id

Ref: AlumnosEnCursos.idCurso > Curso.id

Ref: Asignacion.idCurso > Curso.id

Ref: EntregaAsignacionAlumno.idAsignacion > Asignacion.id

Ref: EntregaAsignacionAlumno.idAlumno > Alumno.id

Ref: Sesion.idUsuario > Usuario.id